refact: change response dto for similar domain name generation
