# api/swagger/swagger.yaml
@@ -12,102 +12,32 @@ definitions:
       updatedAt:
         type: string
     type: object
-  github_com_copolio_namegpt_pkg_client_gabia.RegistCheckResult:
-    properties:
-      app_price:
-        type: string
-      backorder_date:
-        type: string
-      cart:
-        type: string
-      category_end:
-        type: string
-      category_path:
-        type: string
-      check:
-        type: string
-      description:
-        type: string
-      display_tooltip:
-        type: string
-      domain:
-        type: string
-      domain_tld:
-        type: string
-      event:
-        type: string
-      event_flag:
-        type: string
-      extra_info: {}
-      flag:
-        type: string
-      input_source:
-        type: string
-      is_new:
-        type: string
-      is_premium:
-        type: string
-      managed:
-        type: string
-      new_flag:
-        type: string
-      parent_index:
-        type: boolean
-      premium_extend_price:
-        items: {}
-        type: array
-      price:
-        items:
-          properties:
-            app_price:
-              type: integer
-            discount_price:
-              type: integer
-            fixed_price:
-              type: integer
-            fixed_price_vat:
-              type: integer
-            offer_year:
-              type: integer
-            save_point:
-              type: integer
-            vat_price:
-              type: integer
-            view_app_price:
-              type: integer
-            view_price_value:
-              type: string
-          type: object
-        type: array
-      price_detail:
-        type: string
-      puny_domain:
-        type: string
-      reserve:
-        type: string
-      reserve_gubun:
-        type: string
-      result:
-        type: string
-      special_flag:
-        type: string
-      status:
-        type: string
-      stype:
-        type: integer
-      tab:
-        type: string
-      whois:
-        type: string
-      whois_domain:
-        type: string
-    type: object
   github_com_copolio_namegpt_pkg_dto.CreateUser:
     properties:
       name:
         type: string
     required:
     - name
+    type: object
+  github_com_copolio_namegpt_pkg_dto.DomainInfo:
+    properties:
+      available:
+        type: boolean
+      domain:
+        type: string
+      price:
+        type: string
+      suffix:
+        type: string
+    type: object
+  github_com_copolio_namegpt_pkg_dto.GenerateDomainNameResult:
+    properties:
+      domainName:
+        type: string
+      info:
+        items:
+          $ref: '#/definitions/github_com_copolio_namegpt_pkg_dto.DomainInfo'
+        type: array
     type: object
   github_com_copolio_namegpt_pkg_dto.RecommendDomainNames:
     properties:
@@ -236,7 +166,7 @@ paths:
           description: domain names
           schema:
             items:
-              $ref: '#/definitions/github_com_copolio_namegpt_pkg_client_gabia.RegistCheckResult'
+              $ref: '#/definitions/github_com_copolio_namegpt_pkg_dto.GenerateDomainNameResult'
             type: array
       summary: Get similar domain names given input
       tags:
